2003-05-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* pkgconf/stylesheet.dsl: No callout graphics.

2003-05-14  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* ecos.db: Changed human-readable name and description of
        CYGPKG_IO_SERIAL_ARM_AT91 to something sensible.

2003-05-12  Nick Garnett  <nickg@balti.calivar.com>

	* ecos.db: Added packages and targets for Atmel AT91 boards: EB40,
	EB40A, EB42 and EB55.

2003-05-05  John Dallaway  <jld@ecoscentric.com>

	* pkgconf/rules.doc: Build PNG images (not GIFs) for HTML docs.

2003-03-23  Iztok Zupet  <iz@vsr.si>

	* pkgconf/rules.doc: Use three stylesheets instead of one.
	One for HTML the other for PDF-letter and the third one for PDF-A4
	format. (Stylesheets do not support two printable targets in 
	same stylesheet). Added copyfiles to PDF targets.
	* pkgconf/ssletter.dsl: New file.
	* pkgconf/ssa4.dsl: New file.
	* pkgconf/stylesheet.dsl: remove print stylesheet.

2003-04-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* ecos.db: Shorten some long target names to stop them overrunning
	GUI boundaries.

2003-03-24  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: New platform - Analogue & Micro AdderII (PPC852T)

2003-03-18  Mark Salter  <msalter@redhat.com>

        * ecos.db: Add support for XScale IXP425, IXDP425, GRG.

2003-03-05  John Dallaway  <jld@ecoscentric.com>

	* ecosadmin.tcl: Prevent calls to 'cygpath' with an empty
	path argument.

2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* ecos.db: Added the Simple Network Time Protocol (SNTP) client.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* pkgconf/rules.doc: Allow support for copying files directly from
	source doc dir to build dir. Primarily intended for copying over
	pre-built GIFs for the moment.

2003-02-20  Gary Thomas  <gary@mind.be>

	* ecos.db: New platform - NMI uE250 (ARM Xscale PXA250)

2003-02-14  Tim Michals  <t.michals@attbi.com>
2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>
